--- a/src/js/custom_elements/date_display/date_display.scss
+++ b/src/js/custom_elements/date_display/date_display.scss
@@ -5,7 +5,8 @@ moon-date {
   place-self: center;
 
   a {
-    padding: .5rem 1rem;
+    padding-block: .5rem;
+    padding-inline: 1rem;
     transition: transform var(--transition);
     white-space: nowrap;
 
