--- a/src/js/custom_elements/donut_chart/donut_chart.scss
+++ b/src/js/custom_elements/donut_chart/donut_chart.scss
@@ -1,7 +1,7 @@
 donut-chart {
-  height: 100%;
+  block-size: 100%;
+  inline-size: 100%;
   position: absolute;
-  width: 100%;
 
   text {
     font-size: .8125em;
