--- a/src/js/custom_elements/photo/photo.scss
+++ b/src/js/custom_elements/photo/photo.scss
@@ -2,17 +2,17 @@ moon-photo {
   & > div {
     align-items: center;
     display: flex;
-    height: 100%;
+    block-size: 100%;
+    inline-size: 100%;
     justify-content: center;
     position: absolute;
-    width: 100%;
   }
 
   figure {
     border-radius: 50%;
     flex: 0 0 44%;
     overflow: hidden;
-    padding: 0 0 44%;
+    padding-block: 0 44%;
     position: relative;
   }
 
