--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   background: black;
   color: white;
@@ -17,9 +21,8 @@ body {
   font-variation-settings: 'wght' 500;
   grid: var(--grid);
   margin: 0;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-  padding: 0 0 env(safe-area-inset-bottom);
+  min-block-size: 100dvh;
+  padding-block: 0 env(safe-area-inset-bottom);
 
   // Disable UI while loading data.
   &[loading] * {
@@ -39,12 +42,6 @@ body {
       opacity: 1;
     }
   }
-}
-
-html {
-  height: -webkit-fill-available;
-  -webkit-tap-highlight-color: transparent;
-  text-size-adjust: none;
 }
 
 main {
@@ -76,10 +73,10 @@ figure {
 
 img,
 svg {
-  height: auto;
+  block-size: auto;
   pointer-events: none;
   vertical-align: middle;
-  width: 100%;
+  inline-size: 100%;
 }
 
 [hidden] {
