inset and margin logical properties

--- a/src/js/custom_elements/info/info.scss
+++ b/src/js/custom_elements/info/info.scss
@@ -18,7 +18,7 @@ moon-info {
 
   [id='percent'] {
     color: rgba(white, .7);
-    margin-top: .5rem;
+    margin-block: .5rem 0;
   }
 
   [id='percent'][invisible] {
