--- a/src/js/custom_elements/user_location/user_location.scss
+++ b/src/js/custom_elements/user_location/user_location.scss
@@ -69,7 +69,7 @@ user-location {
 
   // Reset button and icon styles.
   [type='reset'] {
-    right: 0;
+    inset-inline: auto 0;
 
     circle {
       fill: rgba(white, 0);
