--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -1,3 +1,24 @@
 moon-app {
-  display: contents;
+  --background-0: #{rgba(white, 0)};
+  --background-1: #{rgba(white, .15)};
+  --background-2: #{rgba(white, .25)};
+  --background-3: #{rgba(white, .7)};
+  
+  --app-grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr / var(--controls-size) minmax(auto, var(--charts-max-size)) var(--controls-size);
+  --chart-size: 14.5rem;
+  --charts-max-size: 30rem;
+  --controls-size: 3rem;
+  --fineprint: .75em;
+  --input-size: 2rem;
+  --transition: .3s;
+  --transition-intro: 1s;
+
+  @media (min-width: 36rem) {
+    --app-grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr / minmax(var(--controls-size), 1fr) minmax(var(--chart-size), var(--charts-max-size)) minmax(var(--controls-size), 1fr);
+    --fineprint: .875em;
+  }
+
+  block-size: 100dvh;
+  display: grid;
+  grid: var(--app-grid);
 }
