renames moon-charts to ticks-chart (no-op)

--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -24,7 +24,7 @@ moon-app {
   grid: var(--app-grid);
 }
 
-:is(donut-chart, moon-charts, moon-photo) {
+:is(donut-chart, moon-photo, ticks-chart) {
   animation: scaleIn var(--transition-intro) ease;
   aspect-ratio: 1;  
   grid-area: charts;
