--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,7 @@
 @import 'base';
-@import 'progress-bar';
-@import 'animations';
 
 @import '../js/custom_elements/app/app';
+@import '../js/custom_elements/app/progress-bar';
 @import '../js/custom_elements/donut_chart/donut_chart';
 @import '../js/custom_elements/info/info';
 @import '../js/custom_elements/photo/photo';
