--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -17,8 +17,14 @@
   box-sizing: border-box;
 }
 
+[hidden] {
+  display: none !important;
+  pointer-events: none !important;
+}
+
 html {
   -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
 }
 
 body {
@@ -29,23 +35,23 @@ body {
   margin: 0;
   min-block-size: 100dvh;
   padding-block: 0 env(safe-area-inset-bottom);
-}
 
-// Disable UI while loading data.
-body:has([data-loading]) {
-  pointer-events: none;
-}
+  // Disable UI while loading data.
+  &:has([data-loading]) {
+    pointer-events: none;
+  }
 
-body[no-js] {
-  place-items: center;
+  &.no-js {
+    place-items: center;
 
-  a {
-    color: white;
-    opacity: .5;
+    a {
+      color: white;
+      opacity: .5;
 
-    &:hover,
-    &:focus {
-      opacity: 1;
+      &:hover,
+      &:focus {
+        opacity: 1;
+      }
     }
   }
 }
@@ -74,11 +80,6 @@ svg {
   pointer-events: none;
   vertical-align: middle;
   inline-size: 100%;
-}
-
-[hidden] {
-  display: none !important;
-  pointer-events: none !important;
 }
 
 // -----------------------------------------------------------------------------
