restores image.onload; <img> generation via properties

--- a/src/js/custom_elements/photo/photo.scss
+++ b/src/js/custom_elements/photo/photo.scss
@@ -8,4 +8,12 @@ moon-photo {
   &[hemisphere='southern'] {
     transform: rotate(180deg);
   }
+  
+  img {
+    transition: opacity 1s ease;
+  }
+  
+  [data-loading] {
+    opacity: 0;
+  }
 }
