--- a/src/js/custom_elements/photo/photo.scss
+++ b/src/js/custom_elements/photo/photo.scss
@@ -2,13 +2,18 @@ moon-photo {
   aspect-ratio: 1;
   border-radius: 50%;
   display: grid;
+  grid: 1fr / 1fr;
   inline-size: 42.5%;     // = max-inline-size / 480 viewbox
   max-inline-size: 204px; // = 480 viewbox * inline-size
   overflow: hidden;
-  place-content: center;
+  place-items: center;
+
+  & > * {
+    grid-area: 1 / 1;
+  }
 
   img {
-    transition: opacity 1s ease;
+    transition: opacity .5s ease;
   }
   
   img[data-loading] {
