--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -4,13 +4,12 @@ moon-app {
   --background-2: #{rgba(white, .25)};
   --background-3: #{rgba(white, .7)};
   
-  --app-grid: '. phase .' 2fr '. percent .' 1fr 'charts charts charts' 'prev date next' 1fr '. location .' 2fr / var(--controls-size) minmax(auto, var(--charts-max-size)) var(--controls-size);
+  --app-grid: '. phase .' 2fr '. percent .' 1fr 'charts charts charts' '. date .' 1fr 'prev location next' 2fr / var(--controls-size) minmax(auto, var(--charts-max-size)) var(--controls-size);
   --chart-size: 14.5rem;
   --charts-max-size: 30rem;
   --controls-size: 2.75rem;
   
   --fineprint: .75em;
-  --input-size: 2.75rem;
   --transition: .3s;
   --transition-intro: 1s;
 
