--- a/src/js/custom_elements/user_location/user_location.scss
+++ b/src/js/custom_elements/user_location/user_location.scss
@@ -38,8 +38,8 @@ user-location {
     border-radius: 50%;
     display: grid;
     inline-size: 2.75rem;
-    place-content: center;
     padding: 0;
+    place-content: center;
     transition: background-color var(--transition);
   }
 
@@ -51,52 +51,42 @@ user-location {
 
   // Reset button and icon styles.
   [type='reset'] {
+    color: white;
     grid-area: reset;
+    opacity: .7;
+    transition: opacity var(--transition);
+
+    &:focus {
+      opacity: 1;
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        opacity: 1;
+      }
+    }
 
     svg {
       inline-size: 2rem;
     }
 
     circle {
-      fill: rgba(white, 0);
-      transition: fill var(--transition);
+      fill: currentColor;
     }
 
     path {
       fill: none;
-      stroke: rgba(black, 0);
+      stroke: rgba(black, .7);
       stroke-linecap: round;
       stroke-width: 1;
-      transition: stroke var(--transition);
     }
   }
 
-  // Reset button states when input is focused.
-  input:focus ~ [type='reset'] {
-    circle {
-      fill: var(--background-3);
-    }
+  input:not(:focus) ~ [type='reset'] {
+    opacity: 0;
 
-    path {
-      stroke: rgba(black, .7);
-    }
-
-    &:focus circle {
-      fill: rgba(white, 1);
-    }
-
-    &:focus path {
-      stroke: rgba(black, 1);
-    }
-
-    @media (any-hover: hover) {
-      &:hover circle {
-        fill: rgba(white, 1);
-      }
-
-      &:hover path {
-        stroke: rgba(black, 1);
-      }
+    &:focus {
+      opacity: 1;
     }
   }
 
@@ -104,7 +94,6 @@ user-location {
   [id='geo'] {
     background-color: var(--background-0);
     color: white;
-    opacity: 0;
     grid-area: geo;
     transition: background-color var(--transition), opacity var(--transition);
   
@@ -119,7 +108,6 @@ user-location {
     }
 
     svg {
-      // color: currentColor;
       inline-size: 2rem;
       padding: 2px;
     }
@@ -138,8 +126,4 @@ user-location {
       fill: none;
     }
   }
-}
-
-input:focus ~ [id='geo'] {
-  opacity: 1;
 }
