input layout fix, animation change

--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -42,6 +42,10 @@ moon-app {
   place-self: center;
 }
 
+user-location {
+  animation: slideInUp var(--transition-intro) ease;
+}
+
 [data-direction='prev'] {
   animation: slideInLeft var(--transition-intro) ease;
   grid-area: prev;
