--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -35,7 +35,7 @@ moon-app {
   grid-area: percent;
 }
 
-:is(donut-chart, moon-photo, moon-ticks) {
+:is(moon-chart, moon-photo, moon-ticks) {
   animation: scaleIn var(--transition-intro) ease;
   aspect-ratio: 1;  
   grid-area: charts;
