renames to location/moon-location

--- a/src/js/custom_elements/app/app.scss
+++ b/src/js/custom_elements/app/app.scss
@@ -42,7 +42,7 @@ moon-app {
   place-self: center;
 }
 
-user-location {
+moon-location {
   animation: slideInUp var(--transition-intro) ease;
 }
 
